<resources>
    <string name="app_name">KU Pizza</string>
    <string name="welcome_text">Welcome to KU Pizza!</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="sign_up_fname">First Name</string>
    <string name="sign_up_lname">Last Name</string>
    <string name="sign_up_email">Email Address</string>
    <string name="sign_up_prompt">Please fill the fields below</string>
    <string name="sign_up_street">Street</string>
    <string name="sign_up_bldg">Building / House No.</string>
    <string name="sign_up_floor">Floor No.</string>
    <string name="sign_up_apt">Flat No.</string>
    <string name="register_button">Register and Login</string>
    <string name="shared_preferences_filename">ae.ac.ku.pizza.prefs</string>
    <string name="fname_key">ae.ac.ku.pizza.fname</string>
    <string name="lname_key">ae.ac.ku.pizza.lname</string>
    <string name="email_key">ae.ac.ku.pizza.email</string>
    <string name="street_key">ae.ac.ku.pizza.street</string>
    <string name="building_key">ae.ac.ku.pizza.building</string>
    <string name="floor_key">ae.ac.ku.pizza.floor</string>
    <string name="apartment_key">ae.ac.ku.pizza.apartment</string>
    <string name="location_key">ae.ac.ku.pizza.location</string>
    <string name="login_message">Hello, %s %s</string>
    <string name="sign_out_button">Sign Out</string>
    <string name="cart_button">Cart</string>
    <string name="item_pizza">Pizza</string>
    <string name="button_add">Add to cart</string>
    <string name="item_wings">Chicken Wings</string>
    <string name="item_starters">Starters</string>
    <string name="item_drinks">Drinks</string>
    <string name="button_increment">+</string>
    <string name="button_decrement">-</string>
    <string name="back_to_menu">Back to Menu</string>
    <string name="item_deals">Deals</string>
    <string name="item_pasta">Pasta</string>
    <string name="item_desserts">Desserts</string>
    <string name="tag_deals">deals</string>
    <string name="tag_pizza">pizza</string>
    <string name="tag_desserts">desserts</string>
    <string name="tag_wings">wings</string>
    <string name="tag_starters">starters</string>
    <string name="tag_drinks">drinks</string>
    <string name="tag_pasta">pasta</string>
    <string name="button_checkout">Place Order</string>
    <string name="payment_select">Payment Method:</string>
    <string name="choice_card">Credit Card</string>
    <string name="choice_cash">Cash on Delivery</string>
    <string name="card_number">Credit Card:</string>
    <string name="title_activity_receipt">ReceiptActivity</string>
    <string name="price_total">Total Price:</string>
    <string name="receipt_start">Your order has been successfully received, thank you for choosing KU Pizza!</string>
    <string name="info_laber">Order Information:</string>
    <string name="name_label">Name:</string>
    <string name="phone_label">Phone Number:</string>
    <string name="order_label">Ordered Items:</string>
    <string name="price_label">Total Order Price:</string>
    <string name="location_label">Latitude and Logitude:</string>
    <string name="time_label">Estimated Time Until Arrival:</string>
    <string name="receipt_end">We hope you\'ll enjoy our food. :)</string>
    <string name="sign_up_phone">Phone Number</string>
    <string name="phone_key">ae.ac.ku.pizza.phone</string>
    <string name="x">x</string>
    <string name="aed">AED</string>
    <string name="sign_up_area">Area</string>
</resources>
