<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodMenuActivity">

    <TextView
        android:id="@+id/menuUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/login_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/signOutButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:onClick="signOutAct"
        android:text="@string/sign_out_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/menuUser"
        app:layout_constraintEnd_toStartOf="@+id/cartButton" />

    <Button
        android:id="@+id/cartButton"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:text="@string/cart_button"
        app:layout_constraintBaseline_toBaselineOf="@+id/signOutButton"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>