<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:visibility="gone">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="SAMPLE ITEM"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/increment"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="addItem"
            android:tag="@string/item_drinks"
            android:text="@string/button_increment"
            app:layout_constraintBaseline_toBaselineOf="@+id/text"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/number"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/text"
            app:layout_constraintEnd_toStartOf="@+id/increment" />

        <Button
            android:id="@+id/decrement"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:minWidth="0dp"
            android:minHeight="0dp"
            android:onClick="removeItem"
            android:tag="@string/item_drinks"
            android:text="@string/button_decrement"
            app:layout_constraintBaseline_toBaselineOf="@+id/text"
            app:layout_constraintEnd_toStartOf="@+id/number" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="154dp"
            android:text="999"
            app:layout_constraintBaseline_toBaselineOf="@+id/text"
            app:layout_constraintEnd_toEndOf="parent" />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>